--- a/_layouts/toolkit.html
+++ b/_layouts/toolkit.html
@@ -141,7 +141,9 @@ layout: base
           <div>
             <span class="download-button-icon"></span>
           </div>
-          <div>
+            <div class="usa-width-one-half">
+      <a class="usa-button usa-button--secondary" style="width: 100%; margin-bottom: 10px;"  href="../assets/toolkits/Engaging_SubAgencies_Bureaus.pdf" target="_blank"> Engaging Sub-Agencies and Bureaus (324 KB)</a>
+        <div>
             <span>Engaging Bureaus or Sub-Agencies</span>
           </div>
         </div>
