--- a/_layouts/toolkit.html
+++ b/_layouts/toolkit.html
@@ -139,8 +139,12 @@ layout: base
             <span class="download-button-icon"></span>
           </div>
             <div class="usa-width-one-half">
-      <a class="usa-button usa-button--secondary" style="width: 100%; margin-bottom: 10px;"  href="../assets/toolkits/Engaging_SubAgencies_Bureaus.pdf" target="_blank"> Engaging Sub-Agencies and Bureaus (324 KB)</a>
-        <div>
+      <a class="usa-button usa-button--secondary" style="width: 100%; margin-bottom: 10px;" href="../assets/toolkits/Engaging_SubAgencies_Bureaus.pdf" target="_blank"> 
+            <div>
+             <div>
+            <span class="download-button-icon"></span>
+          </div>
+          <div>
             <span>Engaging Bureaus or Sub-Agencies</span>
           </div>
         </div>
