--- a/_layouts/toolkit.html
+++ b/_layouts/toolkit.html
@@ -123,21 +123,7 @@ layout: base
         </div>
       </a>
     </div>
-    {% comment %} <div class="usa-width-one-fourth">
-      <a class="usa-button usa-button--secondary" style="width: 100%; margin-bottom: 10px;" target="_blank">
-        <div>
-          <div>
-            <span class="download-button-icon"></span>
-          </div>
-          </div>
-      </a>
-    </div>
-    <div class="usa-width-one-fourth">
-      <a class="usa-button usa-button--secondary" style="width: 100%; margin-bottom: 10px;" target="_blank">
-        <div>
-          <div>
-            <span class="download-button-icon"></span>
-          </div>
+        <div class="usa-grid">
             <div class="usa-width-one-half">
       <a class="usa-button usa-button--secondary" style="width: 100%; margin-bottom: 10px;" href="../assets/toolkits/Engaging_SubAgencies_Bureaus.pdf" target="_blank"> 
             <div>
@@ -149,7 +135,7 @@ layout: base
           </div>
         </div>
       </a>
-    </div> {% endcomment %}
+    </div> 
     <div class="usa-width-one-half">
       <a class="usa-button usa-button--secondary" style="width: 100%; margin-bottom: 10px;"  href="../assets/toolkits/reference_sheet.pdf" target="_blank">
         <div>
@@ -163,8 +149,7 @@ layout: base
       </a>
     </div>
   </div>
-  
-  {% comment %}     
+    {% comment %}     
   <div align="center">
   </div>
   <div class="toolkits-div">
