--- a/_layouts/toolkit.html
+++ b/_layouts/toolkit.html
@@ -111,7 +111,7 @@ layout: base
       <h2 style="text-align: center; margin-bottom: 10px; color: #2e9ac4;">Additional Toolkit Resources</h2>
   </div>
   <div class="usa-grid">    
-    <div class="usa-width-one-half">
+    <div class="usa-width-one-third">
       <a class="usa-button usa-button--secondary" style="width: 100%; margin-bottom: 10px;" href="../assets/toolkits/evidence_act_overview.pdf" target="_blank">
         <div>
           <div>
@@ -124,7 +124,7 @@ layout: base
       </a>
     </div>
         <div class="usa-grid">
-            <div class="usa-width-one-half">
+            <div class="usa-width-one-third">
       <a class="usa-button usa-button--secondary" style="width: 100%; margin-bottom: 10px;" href="../assets/toolkits/Engaging_SubAgencies_Bureaus.pdf" target="_blank"> 
             <div>
              <div>
@@ -136,7 +136,7 @@ layout: base
         </div>
       </a>
     </div> 
-    <div class="usa-width-one-half">
+    <div class="usa-width-one-third">
       <a class="usa-button usa-button--secondary" style="width: 100%; margin-bottom: 10px;"  href="../assets/toolkits/reference_sheet.pdf" target="_blank">
         <div>
           <div>
