--- a/_layouts/toolkit.html
+++ b/_layouts/toolkit.html
@@ -99,10 +99,12 @@ layout: base
           <ul style="line-height: 25px;">
             <li style="line-height: 25px;">
              <a href="../assets/toolkits/Capacity_Assessment_Overview.pdf" target="_blank"> Capacity Assessment Overview (324 KB)</a>
-            </li>   
-            <li style="line-height: 25px;">Capacity Assessment Tips</li>            
+            </li>  
+              <li style="line-height: 25px;">
+             <a href="../assets/toolkits/Capacity_Assessment_Tips.pdf" target="_blank"> Capacity Assessment Tips (324 KB)</a>
+            </li>                
           </ul>
-        </p>
+          </p>
       </div>
     </article>
   </div>
