--- a/_sass/core/_variables.scss
+++ b/_sass/core/_variables.scss
@@ -25,3 +25,7 @@ $color-brand-dark-active: darken($color-brand-dark, 20%);
 
 $nav-width: 892px;
 $display-kerning: -0.4px;
+
+// Patch from older version of USWDS //
+$color-focus:                #3e94cf !default;
+$focus-shadow: 0 0 3px $color-focus, 0 0 7px $color-focus !default;
