switch "base" layout to "default" layout

--- a/_layouts/toolkit.html
+++ b/_layouts/toolkit.html
@@ -1,5 +1,5 @@
 ---
-layout: base
+layout: default
 ---
 
 <div class="usa-section background-brand-dark">
@@ -22,9 +22,9 @@ layout: base
   {% endif %}
   {{ content }}
 </div>
-<section class="usa-section background-tint" style="padding-top: 2rem;">  
+<section class="usa-section background-tint" style="padding-top: 2rem;">
   <div class="usa-grid">
-    <article class="card-toolkit usa-width-one-third">     
+    <article class="card-toolkit usa-width-one-third">
       <div class="card-image" style="text-align: center; background-color: #2CBEB3;">
         <img src="../assets/toolkits/learning_agenda_bg_hq_w.png" style="max-height: 200px;">
       </div>
@@ -50,7 +50,7 @@ layout: base
               <li style="line-height: 25px;">
                 <a href="../assets/toolkits/Activity_3_Supplement_FINAL.pptx" target="_blank">Activity 3 Supplement (1.65 MB)</a>
               </li>
-            </ul>            
+            </ul>
             <li style="line-height: 25px;">
               <a href="../assets/toolkits/Sample_Learning_Agenda_Section.pdf" target="_blank">Sample Learning Agenda Section (179 KB)</a>
             </li>
@@ -79,7 +79,7 @@ layout: base
             </li>
             <li style="line-height: 25px;">
               <a href="../assets/toolkits/Annual_Evaluation_Plan_Workbook.docx" target="_blank">Annual Evaluation Plan Workbook (324 KB)</a>
-            </li>            
+            </li>
             <li style="line-height: 25px;">
               <a href="../assets/toolkits/Sample_Evaluation_Description.pdf" target="_blank">Sample Evaluation Description (238 KB)</a>
             </li>
@@ -99,10 +99,10 @@ layout: base
           <ul style="line-height: 25px;">
             <li style="line-height: 25px;">
              <a href="../assets/toolkits/Capacity_Assessment_Overview.pdf" target="_blank"> Capacity Assessment Overview (324 KB)</a>
-            </li>  
+            </li>
               <li style="line-height: 25px;">
              <a href="../assets/toolkits/Capacity_Assessment_Tips.pdf" target="_blank"> Capacity Assessment Tips (324 KB)</a>
-            </li>                
+            </li>
           </ul>
           </p>
       </div>
@@ -112,7 +112,7 @@ layout: base
   <div class="usa-width-one-whole">
       <h2 style="text-align: center; margin-bottom: 10px; color: #2e9ac4;">Additional Toolkit Resources</h2>
   </div>
-  <div class="usa-grid">    
+  <div class="usa-grid">
     <div class="usa-width-one-third">
       <a class="usa-button usa-button--secondary" style="width: 100%; margin-bottom: 10px;" href="../assets/toolkits/evidence_act_overview.pdf" target="_blank">
         <div>
@@ -127,7 +127,7 @@ layout: base
     </div>
         <div class="usa-grid">
             <div class="usa-width-one-third">
-      <a class="usa-button usa-button--secondary" style="width: 100%; margin-bottom: 10px;" href="../assets/toolkits/Engaging_SubAgencies_Bureaus.pdf" target="_blank"> 
+      <a class="usa-button usa-button--secondary" style="width: 100%; margin-bottom: 10px;" href="../assets/toolkits/Engaging_SubAgencies_Bureaus.pdf" target="_blank">
             <div>
              <div>
             <span class="download-button-icon"></span>
@@ -137,7 +137,7 @@ layout: base
           </div>
         </div>
       </a>
-    </div> 
+    </div>
     <div class="usa-width-one-third">
       <a class="usa-button usa-button--secondary" style="width: 100%; margin-bottom: 10px;"  href="../assets/toolkits/reference_sheet.pdf" target="_blank">
         <div>
@@ -151,7 +151,7 @@ layout: base
       </a>
     </div>
   </div>
-    {% comment %}     
+    {% comment %}
   <div align="center">
   </div>
   <div class="toolkits-div">
