make gsa logo play nice in footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,9 @@
 <footer class="usa-footer usa-section background-light" role="contentinfo">
   <div class="usa-grid">
     <div class="footer-logo-links">
-    {% include icons/oes.svg %}
+      {% include icons/oes.svg %}
         {% if site.footer.image %}
-      <img class="usa-footer-logo-img" src="{{ site.footer.image | prepend: site.baseurl }}" alt="GSA">
+      <img class="usa-footer-logo-img logo-icon" src="{{ site.footer.image | prepend: site.baseurl }}" alt="GSA">
     {% endif %}
     </div>
     <div class="footer-links">
@@ -23,10 +23,10 @@
         </li>
          <li>
           <a href="{{ site.baseurl }}/toolkits/">Evidence Act Toolkits</a>
-        </li>   
+        </li>
         <li>
           <a href="{{ site.baseurl }}/blog/">Utilization Blog</a>
-        </li> 
+        </li>
       </ul>
     </div>
     <div class="footer-links">
@@ -45,7 +45,7 @@
         </li>
         <li>
           <a href="{{ site.baseurl }}/events/">Events</a>
-        </li>  
+        </li>
         <li>
           <a href="{{ site.baseurl }}/opps/">Opportunities</a>
         </li>
@@ -71,6 +71,3 @@
   </div>
 </footer>
 {% include javascript.html %}
-
-
-
