changes from the GSA Web Site Instructions on 5/7/2020

--- a/_layouts/toolkit.html
+++ b/_layouts/toolkit.html
@@ -69,19 +69,19 @@ layout: base
         <p class="card-summary">
           <ul style="line-height: 25px;">
             <li style="line-height: 25px;">
-              <a href="../assets/toolkits/Annual_Evaluation_Plan_Overview.pdf" target="_blank">Annual Evaluation Plan Overview (107 KB)</a>
+              <a href="../assets/toolkits/Annual_Evaluation_Plan_Overview_updated.pdf" target="_blank">Annual Evaluation Plan Overview (106 KB)</a>
             </li>
             <li style="line-height: 25px;">
-              <a href="../assets/toolkits/A_Guide_to_Developing_your_Agency's_Annual_Evaluation_Plan.pdf" target="_blank">A Guide to Developing Your Agency’s Annual Evaluation Plan (938 KB)</a>
+              <a href="../assets/toolkits/A_Guide_to_Developing_Your_Agency's_Annual_Evaluation_Plan_updated.pdf" target="_blank">A Guide to Developing Your Agency’s Annual Evaluation Plan (906 KB)</a>
             </li>
             <li style="line-height: 25px;">
-              <a href="../assets/toolkits/evaluation_planning_tips.pdf" target="_blank">Evaluation Planning Tips (801 KB)</a>
+              <a href="../assets/toolkits/Evaluation_Planning_Tips_updated.pdf" target="_blank">Evaluation Planning Tips (521 KB)</a>
             </li>
             <li style="line-height: 25px;">
-              <a href="../assets/toolkits/Annual_Evaluation_Plan_Workbook.docx" target="_blank">Annual Evaluation Plan Workbook (324 KB)</a>
+              <a href="../assets/toolkits/Annual_Evaluation_Plan_Workbook_updated.docx" target="_blank">Annual Evaluation Plan Workbook (326 KB)</a>
             </li>            
             <li style="line-height: 25px;">
-              <a href="../assets/toolkits/Sample_Evaluation_Description.pdf" target="_blank">Sample Evaluation Description (238 KB)</a>
+              <a href="../assets/toolkits/Sample_Evaluation_Description_updated.pdf" target="_blank">Sample Evaluation Description (193 KB)</a>
             </li>
           </ul>
         </p>
@@ -101,7 +101,7 @@ layout: base
              <a href="../assets/toolkits/Capacity_Assessment_Overview.pdf" target="_blank"> Capacity Assessment Overview (324 KB)</a>
             </li>  
               <li style="line-height: 25px;">
-             <a href="../assets/toolkits/Capacity_Assessment_Tips.pdf" target="_blank"> Capacity Assessment Tips (324 KB)</a>
+             <a href="../assets/toolkits/Capacity_Assessment_Tips.pdf" target="_blank"> Capacity Assessment Tips (348 KB)</a>
             </li>                
           </ul>
           </p>
@@ -125,8 +125,7 @@ layout: base
         </div>
       </a>
     </div>
-        <div class="usa-grid">
-            <div class="usa-width-one-third">
+    <div class="usa-width-one-third">
       <a class="usa-button usa-button--secondary" style="width: 100%; margin-bottom: 10px;" href="../assets/toolkits/Engaging_SubAgencies_Bureaus.pdf" target="_blank"> 
             <div>
              <div>
@@ -146,6 +145,44 @@ layout: base
           </div>
           <div>
             <span>Quick Reference Sheet (106 KB)</span>
+          </div>
+        </div>
+      </a>
+    </div>
+  </div>
+  <div class="usa-grid">    
+    <div class="usa-width-one-third">
+      <a class="usa-button usa-button--secondary" style="width: 100%; margin-bottom: 10px;" href="../assets/toolkits/M-19-23.pdf" target="_blank">
+        <div>
+          <div>
+            <span class="download-button-icon"></span>
+          </div>
+          <div>
+            <span>M-19-23 Phase 1 Implementation of the Foundations for Evidence-Based Policymaking Act of 2018: Learning Agendas, Personnel, and Planning Guidance (3 MB)</span>
+          </div>
+        </div>
+      </a>
+    </div>
+    <div class="usa-width-one-third">
+      <a class="usa-button usa-button--secondary" style="width: 100%; margin-bottom: 10px;" href="../assets/toolkits/M-20-12.pdf" target="_blank"> 
+            <div>
+             <div>
+            <span class="download-button-icon"></span>
+          </div>
+          <div>
+            <span>M-20-12 Phase 4 Implementation of the Foundations for Evidence-Based Policymaking Act of 2018: Program Evaluation Standards and Practices (17 MB)</span>
+          </div>
+        </div>
+      </a>
+    </div> 
+    <div class="usa-width-one-third">
+      <a class="usa-button usa-button--secondary" style="width: 100%; margin-bottom: 10px;"  href="../assets/toolkits/PLAW-115publ435.pdf" target="_blank">
+        <div>
+          <div>
+            <span class="download-button-icon"></span>
+          </div>
+          <div>
+            <span>Evidence Act legislation (369 KB)</span>
           </div>
         </div>
       </a>
