--- a/_sass/core/_typography.scss
+++ b/_sass/core/_typography.scss
@@ -40,7 +40,8 @@ h1 {
 .usa-content {
   p:not(.usa-font-lead),
   ul:not(.usa-accordion) {
-      max-width: 66ch;
+     max-width: 100%;  
+    // max-width: 66ch;
   }
 }
 
