Added updated files to the learning agenda toolkit. Also added updated files to the Additionaly Toolkit Resources section

--- a/_layouts/toolkit.html
+++ b/_layouts/toolkit.html
@@ -35,24 +35,24 @@ layout: base
         <p class="card-summary">
           <ul style="line-height: 25px;">
             <li style="line-height: 25px;">
-              <a href="../assets/toolkits/Learning_Agenda_Overview.pdf" target="_blank">Learning Agenda Overview (110 KB)</a>
+              <a href="../assets/toolkits/Learning_Agenda_Overview_updated.pdf" target="_blank">Learning Agenda Overview (106 KB)</a>
             </li>
             <li style="line-height: 25px;">
-              <a href="../assets/toolkits/A_Guide_to_Developing_your_Agency's_Learning_Agenda.pdf" target="_blank">A Guide to Developing Your Agency’s Learning Agenda (1.72 MB)</a>
+              <a href="../assets/toolkits/A_Guide_to_Developing_Your_Agency's_Learning_Agenda_updated.pdf" target="_blank">A Guide to Developing Your Agency’s Learning Agenda (1.86 MB)</a>
             </li>
             <li style="line-height: 25px;">
-              <a href="../assets/toolkits/Learning_Agenda_Workbook.docx" target="_blank">Learning Agenda Workbook (325 KB)</a>
+              <a href="../assets/toolkits/Learning_Agenda_Workbook_updated.docx" target="_blank">Learning Agenda Workbook (326 KB)</a>
             </li>
             <ul style="line-height: 25px;">
               <li style="line-height: 25px;">
-                <a href="../assets/toolkits/Activity_2_Supplement_FINAL.xlsx" target="_blank">Activity 2 Supplement (56.8 KB)</a>
+                <a href="../assets/toolkits/Activity_2_Supplemental_Download_updated.xlsx" target="_blank">Activity 2 Supplement (57 KB)</a>
               </li>
               <li style="line-height: 25px;">
-                <a href="../assets/toolkits/Activity_3_Supplement_FINAL.pptx" target="_blank">Activity 3 Supplement (1.65 MB)</a>
+                <a href="../assets/toolkits/Activity_3_Supplemental_Download_updated.pptx" target="_blank">Activity 3 Supplement (1.69 MB)</a>
               </li>
             </ul>            
             <li style="line-height: 25px;">
-              <a href="../assets/toolkits/Sample_Learning_Agenda_Section.pdf" target="_blank">Sample Learning Agenda Section (179 KB)</a>
+              <a href="../assets/toolkits/Sample_Learning_Agenda_Section_updated.pdf" target="_blank">Sample Learning Agenda Section (144 KB)</a>
             </li>
           </ul>
         </p>
@@ -114,13 +114,13 @@ layout: base
   </div>
   <div class="usa-grid">    
     <div class="usa-width-one-third">
-      <a class="usa-button usa-button--secondary" style="width: 100%; margin-bottom: 10px;" href="../assets/toolkits/evidence_act_overview.pdf" target="_blank">
+      <a class="usa-button usa-button--secondary" style="width: 100%; margin-bottom: 10px;" href="../assets/toolkits/Capacity_Assessment_Overview_updated.pdf" target="_blank">
         <div>
           <div>
             <span class="download-button-icon"></span>
           </div>
           <div>
-            <span>Evidence Act Phase 1 Overview (100 KB)</span>
+            <span>Evidence Act Phase 1 Overview (104 KB)</span>
           </div>
         </div>
       </a>
@@ -132,7 +132,7 @@ layout: base
             <span class="download-button-icon"></span>
           </div>
           <div>
-            <span>Engaging Bureaus or Sub-Agencies</span>
+            <span>Engaging Bureaus or Sub-Agencies (128 KB)</span>
           </div>
         </div>
       </a>
