--- a/_sass/components/toolkits.scss
+++ b/_sass/components/toolkits.scss
@@ -121,17 +121,18 @@ table {
   font-size: 25px;
   display: contents;
 }
+
 //toolkit-info Styling
 
 .card-toolkit {
-  box-shadow: 0 0 0 1px $color-gray-lighter;
+  box-shadow: 0 0 0 1px color("base-lighter");
   display: block;
   margin-bottom: 3rem;
   padding-bottom: 3rem;
   position: relative;
   text-decoration: none;
 
-  @include media(0px) {
+  @include at-media-max("desktop") {
     display: flex;
     flex-direction: column;
     margin-right: 2.3%;
@@ -140,7 +141,7 @@ table {
     width: 100%;
   }
 
-  @include media(1055px) {
+  @include at-media("desktop") {
     display: flex;
     flex-direction: column;
     margin-left: 5px;
@@ -151,7 +152,7 @@ table {
   }
 
   &:hover {
-    box-shadow: 0 0 0 1px $color-primary;
+    box-shadow: 0 0 0 1px color("primary");
   }
 
   &:active {
@@ -169,7 +170,7 @@ table {
   border-radius: 10px;
 }
 
-.nav > li > a {
+.nav>li>a {
   display: block;
 }
 
@@ -187,11 +188,11 @@ table {
   clear: both;
 }
 
-.nav-tabs > li {
+.nav-tabs>li {
   float: left;
 }
 
-.nav-tabs > li > a {
+.nav-tabs>li>a {
   padding-right: 12px;
   padding-left: 12px;
   margin-right: 2px;
@@ -202,11 +203,11 @@ table {
   border-bottom: 1px solid #ddd;
 }
 
-.nav-tabs > li {
+.nav-tabs>li {
   margin-bottom: -1px;
 }
 
-.nav-tabs > li > a {
+.nav-tabs>li>a {
   padding-top: 8px;
   padding-bottom: 8px;
   line-height: 18px;
@@ -216,12 +217,12 @@ table {
   border-radius: 4px 4px 0 0;
 }
 
-.nav-tabs > li > a:hover {
+.nav-tabs>li>a:hover {
   border-color: #eeeeee #eeeeee #dddddd;
 }
 
-.nav-tabs > .active > a,
-.nav-tabs > .active > a:hover {
+.nav-tabs>.active>a,
+.nav-tabs>.active>a:hover {
   color: #555555;
   cursor: default;
   border: 1px solid #ddd;
@@ -324,7 +325,7 @@ ul {
   border: 1px solid black;
   background-color: #03cab9;
   padding: 10px;
-  box-shadow: 0 0 0 1px $color-gray-lighter;
+  box-shadow: 0 0 0 1px color("base-lighter");
 }
 
 table {
