updated  OMB M-20-12 Phase 4 and OMB M-19-23 Phase 1 to show shortened titles

--- a/_layouts/toolkit.html
+++ b/_layouts/toolkit.html
@@ -158,7 +158,7 @@ layout: base
             <span class="download-button-icon"></span>
           </div>
           <div>
-            <span>M-19-23 Phase 1 Implementation of the Foundations for Evidence-Based Policymaking Act of 2018: Learning Agendas, Personnel, and Planning Guidance (3 MB)</span>
+            <span>OMB M-19-23 Phase 1 (3 MB)</span>
           </div>
         </div>
       </a>
@@ -170,7 +170,7 @@ layout: base
             <span class="download-button-icon"></span>
           </div>
           <div>
-            <span>M-20-12 Phase 4 Implementation of the Foundations for Evidence-Based Policymaking Act of 2018: Program Evaluation Standards and Practices (17 MB)</span>
+            <span>OMB M-20-12 Phase 4 (17 MB)</span>
           </div>
         </div>
       </a>
