changed the boxes at the bottom of the toolkit page to fit the text. Also, styled the paragraphs at the top of the page to fit the width.

--- a/_layouts/toolkit.html
+++ b/_layouts/toolkit.html
@@ -20,7 +20,7 @@ layout: base
     {% endif %}
     </div>
   {% endif %}
-  {{ content }}
+  <div id="toolkitlang">{{ content }}</div>
 </div>
 <section class="usa-section background-tint" style="padding-top: 2rem;">  
   <div class="usa-grid">
@@ -112,7 +112,7 @@ layout: base
   <div class="usa-width-one-whole">
       <h2 style="text-align: center; margin-bottom: 10px; color: #2e9ac4;">Additional Toolkit Resources</h2>
   </div>
-  <div class="usa-grid">    
+  <div class="usa-grid" id=toolkitbutton1>    
     <div class="usa-width-one-third">
       <a class="usa-button usa-button--secondary" style="width: 100%; margin-bottom: 10px;" href="../assets/toolkits/Capacity_Assessment_Overview_updated.pdf" target="_blank">
         <div>
@@ -150,7 +150,7 @@ layout: base
       </a>
     </div>
   </div>
-  <div class="usa-grid">    
+  <div class="usa-grid" id=toolkitbutton2>    
     <div class="usa-width-one-third">
       <a class="usa-button usa-button--secondary" style="width: 100%; margin-bottom: 10px;" href="../assets/toolkits/M-19-23.pdf" target="_blank">
         <div>
@@ -182,7 +182,7 @@ layout: base
             <span class="download-button-icon"></span>
           </div>
           <div>
-            <span>Evidence Act legislation (369 KB)</span>
+            <span>Evidence Act Legislation <br>(369 KB)</span>
           </div>
         </div>
       </a>
