--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -30,3 +30,15 @@
   width: 40px;
   vertical-align: middle;
 }
+
+#toolkitbutton1, #toolkitbutton2 {
+  a {
+    min-height:115px;
+  }
+}
+
+#toolkitlang {
+  p {
+    max-width:100%;
+  }
+}
