--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,7 +25,7 @@
           <a href="{{ site.baseurl }}/toolkits/">Evidence Act Toolkits</a>
         </li>   
         <li>
-          <a href="{{ site.baseurl }}/blog/">Utilization Blog</a>
+          <a href="{{ site.baseurl }}/blog/">OES Blog</a>
         </li> 
       </ul>
     </div>
