setting custom stack makes fonts correct

--- a/_sass/settings/_uswds-theme-typography.scss
+++ b/_sass/settings/_uswds-theme-typography.scss
@@ -202,7 +202,7 @@ $theme-font-cond-custom-stack:  false;
 $theme-font-icon-custom-stack:  false;
 $theme-font-lang-custom-stack:  false;
 $theme-font-mono-custom-stack:  false;
-$theme-font-sans-custom-stack:  false;
+$theme-font-sans-custom-stack:  'Lato', "Helvetica Neue", Helvetica, Arial, sans;
 $theme-font-serif-custom-stack: false;
 
 /*
