initialize team page with 2020 staff

--- a/_includes/filter.html
+++ b/_includes/filter.html
@@ -14,7 +14,7 @@
           <legend class="filter-category tablet:grid-col-3">{{ filter.title }}</legend>
           <ul class="add-list-reset tablet:grid-col">
             <li>
-              <input id="{{ filter.key }}-all" type="radio" checked name="{{ filter.key }}">
+              <input id="{{ filter.key }}-all" type="radio" {% unless filter.default %}checked{% endunless %} name="{{ filter.key }}">
               <label class="usa-button usa-button--outline" for="{{ filter.key }}-all">All</label>
             </li>
             {% capture void %}
@@ -37,8 +37,10 @@
             {% for value in values %}
             {% assign slug = value | append: '' | slugify %}
             <li>
-              <input id="{{ filter.key }}-{{ value }}" type="radio" name="{{ filter.key }}" value="{{ value | jsonify | xml_escape }}">
-              <label class="usa-button usa-button--outline" for="{{ filter.key }}-{{ value }}">{{ value }}</label>
+              {% capture keyval %}{{ filter.key }}-{{ value }}{% endcapture %}
+              {% capture default %}{{ filter.key }}-{{ filter.default }}{% endcapture %}
+              <input id="{{ keyval }}" type="radio" {% if default == keyval %}checked{% endif %} name="{{ filter.key }}" value="{{ value | jsonify | xml_escape }}">
+              <label id="{{ keyval }} {{default}}" class="usa-button usa-button--outline" for="{{ keyval }}">{{ value }}</label>
             </li>
             {% endfor %}
           </ul>
@@ -47,4 +49,4 @@
     </div>
     {% endfor %}
   </div>
-</ul>
+</div>
