--- a/_layouts/project-single.html
+++ b/_layouts/project-single.html
@@ -16,6 +16,10 @@ class: page-project-single
   <h3 class="h4">Year</h3>
   <p>{{ page.year }}</p>
 {% endif %}
+  {% if page.status %}
+  <h3 class="h4">Status</h3>
+  <p>{{ page.status }}</p>
+{% endif %}
 {% if page.agency %}
   <h3 class="h4">Agency</h3>
   <p>{{ page.agency  | join: ', ' }}</p>
@@ -32,4 +36,8 @@ class: page-project-single
   <h3 class="h4">Resources</h3>
   <a class="usa-button" href="{{ page.abstract | prepend: site.baseurl }}">View Abstract</a>
 {% endif %}
+  {% if page.academic-pub %}
+<h3 class="h4">Resources</h3>
+  <a class="usa-button" href="{{ page.academic-pub | prepend: site.baseurl }}">View Academic Publication</a>  
+{% endif %}  
 </div>
