--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -3,6 +3,8 @@ layout: page
 filters:
   - key: year
     title: Year Completed
+  - key: Status
+    title: Status
   - key: domain
     title: Domain
   - key: agency
