--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -3,7 +3,7 @@ layout: page
 filters:
   - key: year
     title: Year Completed
-  - key: Status
+  - key: status
     title: Status
   - key: domain
     title: Domain
