--- a/_layouts/collaborations.html
+++ b/_layouts/collaborations.html
@@ -16,9 +16,9 @@ scripts:
 
 {{ content }}
 
-{% include filter.html items=site.collabs filters=layout.filters %}
+{% include filter.html items=site.collaborations filters=layout.filters %}
 <div class="project-container">
-  {% for project in site.collabs reversed %}
+  {% for project in site.collaborations reversed %}
     {% include collaborations.html %}
   {% endfor %}
 </div>
