--- a/_layouts/collaborations-single.html
+++ b/_layouts/collaborations-single.html
@@ -38,6 +38,6 @@ class: page-collaborations-single
 {% endif %}
   {% if page.academic-pub %}
 <h3 class="h4">Resources</h3>
-  <a class="usa-button" href="{{ page.academic-pub | prepend: site.baseurl }}">View Academic Publication</a>  
+  <a class="usa-button" href="{{ page.academic-pub | prepend: site.baseurl }}">View Publication</a>  
 {% endif %}  
 </div>
