--- a/_includes/collaborations.html
+++ b/_includes/collaborations.html
@@ -14,11 +14,11 @@
         <h3 class="card-description">
           <span>{{ project.title }}</span>
         </h3>
-        <p class="card-summary">{{ collaborations.summary }}</p>
+        <p class="card-summary">{{ project.summary }}</p>
       </div>
-      <a class="card-read" href="{{ collaborations.url | prepend: site.baseurl }}">
+      <a class="card-read" href="{{ project.url | prepend: site.baseurl }}">
         Read more
-        <span class="usa-sr-only">about {{ collaborations.title }}</span>
+        <span class="usa-sr-only">about {{ project.title }}</span>
         {% include icons/arrow-right.svg %}
       </a>
     </article>
