--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -50,7 +50,7 @@
           <a href="{{ site.baseurl }}/opps/">Opportunities</a>
         </li>
         <li>
-          <a href="{{ site.baseurl }}/press/">Press</a>
+          <a href="{{ site.baseurl }}/media/">Media</a>
         </li>
         <li>
           <a href="https://twitter.com/USGSA">@USGSA</a>
