update most of toolkit page to uswds v2, pending merge

--- a/_sass/custom/components/toolkits.scss
+++ b/_sass/custom/components/toolkits.scss
@@ -24,6 +24,10 @@
   margin: 0 auto;
 }
 
+#toolkitlang > p {
+  max-width: 90%;
+}
+
 .download-footer {
   border: none;
   border-style: hidden !important;
@@ -138,7 +142,6 @@ table {
     margin-right: 2.3%;
     height: auto;
     min-height: 200px;
-    width: 100%;
   }
 
   @include at-media("desktop") {
@@ -148,7 +151,6 @@ table {
     margin-right: 2.3%;
     height: auto;
     min-height: 750px;
-    width: 31%;
   }
 
   &:hover {
