--- a/_layouts/toolkit.html
+++ b/_layouts/toolkit.html
@@ -7,7 +7,7 @@ layout: default
     <h1>{{ page.title }}</h1>
   </div>
 </div>
-<div class="usa-grid usa-content main-content" id="main">
+<div class="grid-container usa-content main-content" id="main">
   {% if page.summary %}
   <p class="billboard-message">{{ page.summary }}</p>
   {% endif %}
@@ -21,11 +21,13 @@ layout: default
     {% endif %}
   </div>
   {% endif %}
-  {{ content }}
+  <div id="toolkitlang">
+    {{ content }}
+  </div>
 </div>
-<section class="usa-section background-tint" style="padding-top: 2rem;">
-  <div class="usa-grid">
-    <article class="card-toolkit usa-width-one-third">
+<section class="usa-section background-tint grid-container" style="padding-top: 2rem;">
+  <div class="grid-row">
+    <article class="card-toolkit tablet:grid-col">
       <div class="card-image" style="text-align: center; background-color: #2CBEB3;">
         <img src="../assets/toolkits/learning_agenda_bg_hq_w.png" style="max-height: 200px;">
       </div>
@@ -65,7 +67,7 @@ layout: default
         </p>
       </div>
     </article>
-    <article class="card-toolkit usa-width-one-third">
+    <article class="card-toolkit tablet:grid-col">
       <div class="card-image" style="text-align: center; background-color: #2e9ac4;">
         <img src="../assets/toolkits/annual_eval_bg_hq_w.png" style="max-height: 200px;">
       </div>
@@ -74,25 +76,6 @@ layout: default
           <span>Annual Evaluation Plan Toolkit</span>
         </h3>
         <p class="card-summary">
-<<<<<<< HEAD
-          <ul style="line-height: 25px;">
-            <li style="line-height: 25px;">
-              <a href="../assets/toolkits/Annual_Evaluation_Plan_Overview.pdf" target="_blank">Annual Evaluation Plan Overview (107 KB)</a>
-            </li>
-            <li style="line-height: 25px;">
-              <a href="../assets/toolkits/A_Guide_to_Developing_your_Agency's_Annual_Evaluation_Plan.pdf" target="_blank">A Guide to Developing Your Agency’s Annual Evaluation Plan (938 KB)</a>
-            </li>
-            <li style="line-height: 25px;">
-              <a href="../assets/toolkits/evaluation_planning_tips.pdf" target="_blank">Evaluation Planning Tips (801 KB)</a>
-            </li>
-            <li style="line-height: 25px;">
-              <a href="../assets/toolkits/Annual_Evaluation_Plan_Workbook.docx" target="_blank">Annual Evaluation Plan Workbook (324 KB)</a>
-            </li>
-            <li style="line-height: 25px;">
-              <a href="../assets/toolkits/Sample_Evaluation_Description.pdf" target="_blank">Sample Evaluation Description (238 KB)</a>
-            </li>
-          </ul>
-=======
         <ul style="line-height: 25px;">
           <li style="line-height: 25px;">
             <a href="../assets/toolkits/Annual_Evaluation_Plan_Overview.pdf" target="_blank">Annual Evaluation Plan
@@ -115,11 +98,10 @@ layout: default
               (238 KB)</a>
           </li>
         </ul>
->>>>>>> thisisdano-dw-test-v2
         </p>
       </div>
     </article>
-    <article class="card-toolkit usa-width-one-third">
+    <article class="card-toolkit tablet:grid-col">
       <div class="card-image" style="text-align: center; background-color: #fa5546;">
         <img src="../assets/toolkits/coming_soon_bg_hq_w.png" style="max-height: 200px;">
       </div>
@@ -143,11 +125,11 @@ layout: default
     </article>
   </div>
   <br />
-  <div class="usa-width-one-whole">
-    <h2 style="text-align: center; margin-bottom: 10px; color: #2e9ac4;">Additional Toolkit Resources</h2>
-  </div>
-  <div class="usa-grid">
-    <div class="usa-width-one-third">
+  <div class="grid-row">
+    <div class="grid-col-12">
+      <h2 style="text-align: center; margin-bottom: 10px; color: #2e9ac4;">Additional Toolkit Resources</h2>
+    </div>
+    <div class="tablet:grid-col">
       <a class="usa-button usa-button--secondary" style="width: 100%; margin-bottom: 10px;"
         href="../assets/toolkits/evidence_act_overview.pdf" target="_blank">
         <div>
@@ -161,7 +143,7 @@ layout: default
       </a>
     </div>
     <div class="usa-grid">
-      <div class="usa-width-one-third">
+      <div class="tablet:grid-col">
         <a class="usa-button usa-button--secondary" style="width: 100%; margin-bottom: 10px;"
           href="../assets/toolkits/Engaging_SubAgencies_Bureaus.pdf" target="_blank">
           <div>
@@ -174,7 +156,7 @@ layout: default
           </div>
         </a>
       </div>
-      <div class="usa-width-one-third">
+      <div class="tablet:grid-col">
         <a class="usa-button usa-button--secondary" style="width: 100%; margin-bottom: 10px;"
           href="../assets/toolkits/reference_sheet.pdf" target="_blank">
           <div>
@@ -188,6 +170,7 @@ layout: default
         </a>
       </div>
     </div>
+  </div>
     {% comment %}
     <div align="center">
     </div>
