--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,7 +20,7 @@
               <a href="{{ site.baseurl }}/work/">Evaluation Portfolio</a>
             </li>
             <li>
-              <a href="{{ site.baseurl }}/evaluationprocess/">Evaluation Process</a>
+              <a href="{{ site.baseurl }}/methods/">Evaluation Process</a>
             </li>
             <li>
               <a href="{{ site.baseurl }}/resources/">Guides</a>
