--- a/_sass/custom/all.scss
+++ b/_sass/custom/all.scss
@@ -1,5 +1,5 @@
 // Custom colors ------ //
-@import "custom-colors";
+// @import "custom-colors";
 
 // Core --------- //
 @import "core/variables";
