--- a/_sass/custom/components/_hero.scss
+++ b/_sass/custom/components/_hero.scss
@@ -1,7 +1,7 @@
 // Hero feature ------------- //
 
 .usa-hero__callout {
-  background-color: color('primary');
+  background-color: $oem-blue;
 
   h1 {
     @include typeset('heading', 12, 3)
