--- a/_sass/custom/core/_variables.scss
+++ b/_sass/custom/core/_variables.scss
@@ -23,6 +23,9 @@ $color-primary-darker: 'primary-darker';
 $color-primary-darkest: 'primary-dark';
 $color-gray-medium: 'base';
 
+$oem-blue: #2E9AC4;
+$oem-green: #03CAB9;
+
 // Magic numbers ------- //
 
 $nav-width: 'tablet-lg';
